--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <body style="width:70%;height:7000px;background:#9D7071">
 <header>
     <header style="text-align:center;width:100%;height:80px;background:white">
-	<h1 style="color:aqua">welcome</h1>
+	<h1 style="color:aqua">خوش امدید به وب سایت </h1>
 	</header
 </article>
 
