--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <title></title>
 </head>
+    <b style="background-color:pink; text-align: center;">|<b style="background-color: aqua;">1403</b>|
+    <b style="background-color: bisque;">طراحی</b><b style="background-color: aqua;">|وب|</b> <b style="background-color:pink;">تاریخ </b>|</b>
 <body>
  <body style="width:70%;height:7000px;background:#9D7071">
 <header>
